--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Hugo/aurint.ca/themes/portfolio"]
 	path = Hugo/aurint.ca/themes/portfolio
 	url = https://github.com/wowchemy/wowchemy-hugo-themes.git
+[submodule "Hugo/aurint.ca"]
+	path = Hugo/aurint.ca
+	url = https://github.com/krishnaTO/aurint.ca.git
